--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,5 @@ services:
     ports:
       - '80:80'
     volumes:
-      - './www:/var/www/html'
+      - './www:/var/www/html/some-site'
       - './lib:/var/www/lib'
